correction design collapsbar about

--- a/my-app/src/styles/Collapsebar.scss
+++ b/my-app/src/styles/Collapsebar.scss
@@ -3,7 +3,7 @@ $red-color: #ff6060;
 $gray-color: rgba(128, 128, 128, 0.048);
 
 .collapsebar {
-  width: 90%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
